[Parse/Sema] Expand recovery support for trailing closure in statement conditions

Fixes: SR-5869 (https://bugs.swift.org/browse/SR-5869)